seaqt/QtWidgets/gen_qdatetimeedit.h

typedef struct QChildEvent QChildEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QLineEdit QLineEdit;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTime QTime;
typedef struct QTimeEdit QTimeEdit;
typedef struct QWidget QWidget;
void QDateTimeEdit_connect_dateTimeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDateTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_timeChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QDateTimeEdit_connect_dateChanged(QDateTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
typedef struct VirtualQTimeEdit VirtualQTimeEdit;
typedef struct QTimeEdit_VTable{
	void (*destructor)(VirtualQTimeEdit* self);
	QMetaObject* (*metaObject)(const VirtualQTimeEdit* self);
	void* (*metacast)(VirtualQTimeEdit* self, const char* param1);
	int (*metacall)(VirtualQTimeEdit* self, int param1, int param2, void** param3);
	QSize* (*sizeHint)(const VirtualQTimeEdit* self);
	void (*clear)(VirtualQTimeEdit* self);
	void (*stepBy)(VirtualQTimeEdit* self, int steps);
	bool (*event)(VirtualQTimeEdit* self, QEvent* event);
	void (*keyPressEvent)(VirtualQTimeEdit* self, QKeyEvent* event);
	void (*wheelEvent)(VirtualQTimeEdit* self, QWheelEvent* event);
	void (*focusInEvent)(VirtualQTimeEdit* self, QFocusEvent* event);
	bool (*focusNextPrevChild)(VirtualQTimeEdit* self, bool next);
	int (*validate)(const VirtualQTimeEdit* self, struct miqt_string input, int* pos);
	void (*fixup)(const VirtualQTimeEdit* self, struct miqt_string input);
	QDateTime* (*dateTimeFromText)(const VirtualQTimeEdit* self, struct miqt_string text);
	struct miqt_string (*textFromDateTime)(const VirtualQTimeEdit* self, QDateTime* dt);
	int (*stepEnabled)(const VirtualQTimeEdit* self);
	void (*mousePressEvent)(VirtualQTimeEdit* self, QMouseEvent* event);
	void (*paintEvent)(VirtualQTimeEdit* self, QPaintEvent* event);
	void (*initStyleOption)(const VirtualQTimeEdit* self, QStyleOptionSpinBox* option);
	QSize* (*minimumSizeHint)(const VirtualQTimeEdit* self);
	QVariant* (*inputMethodQuery)(const VirtualQTimeEdit* self, int param1);
	void (*resizeEvent)(VirtualQTimeEdit* self, QResizeEvent* event);
	void (*keyReleaseEvent)(VirtualQTimeEdit* self, QKeyEvent* event);
	void (*focusOutEvent)(VirtualQTimeEdit* self, QFocusEvent* event);
	void (*contextMenuEvent)(VirtualQTimeEdit* self, QContextMenuEvent* event);
	void (*changeEvent)(VirtualQTimeEdit* self, QEvent* event);
	void (*closeEvent)(VirtualQTimeEdit* self, QCloseEvent* event);
	void (*hideEvent)(VirtualQTimeEdit* self, QHideEvent* event);
	void (*mouseReleaseEvent)(VirtualQTimeEdit* self, QMouseEvent* event);
	void (*mouseMoveEvent)(VirtualQTimeEdit* self, QMouseEvent* event);
	void (*timerEvent)(VirtualQTimeEdit* self, QTimerEvent* event);
	void (*showEvent)(VirtualQTimeEdit* self, QShowEvent* event);
	int (*devType)(const VirtualQTimeEdit* self);
	void (*setVisible)(VirtualQTimeEdit* self, bool visible);
	int (*heightForWidth)(const VirtualQTimeEdit* self, int param1);
	bool (*hasHeightForWidth)(const VirtualQTimeEdit* self);
	QPaintEngine* (*paintEngine)(const VirtualQTimeEdit* self);
	void (*mouseDoubleClickEvent)(VirtualQTimeEdit* self, QMouseEvent* event);
	void (*enterEvent)(VirtualQTimeEdit* self, QEnterEvent* event);
	void (*leaveEvent)(VirtualQTimeEdit* self, QEvent* event);
	void (*moveEvent)(VirtualQTimeEdit* self, QMoveEvent* event);
	void (*tabletEvent)(VirtualQTimeEdit* self, QTabletEvent* event);
	void (*actionEvent)(VirtualQTimeEdit* self, QActionEvent* event);
	void (*dragEnterEvent)(VirtualQTimeEdit* self, QDragEnterEvent* event);
	void (*dragMoveEvent)(VirtualQTimeEdit* self, QDragMoveEvent* event);
	void (*dragLeaveEvent)(VirtualQTimeEdit* self, QDragLeaveEvent* event);
	void (*dropEvent)(VirtualQTimeEdit* self, QDropEvent* event);
	bool (*nativeEvent)(VirtualQTimeEdit* self, struct miqt_string eventType, void* message, intptr_t* result);
	int (*metric)(const VirtualQTimeEdit* self, int param1);
	void (*initPainter)(const VirtualQTimeEdit* self, QPainter* painter);
	QPaintDevice* (*redirected)(const VirtualQTimeEdit* self, QPoint* offset);
	QPainter* (*sharedPainter)(const VirtualQTimeEdit* self);
	void (*inputMethodEvent)(VirtualQTimeEdit* self, QInputMethodEvent* param1);
	bool (*eventFilter)(VirtualQTimeEdit* self, QObject* watched, QEvent* event);
	void (*childEvent)(VirtualQTimeEdit* self, QChildEvent* event);
	void (*customEvent)(VirtualQTimeEdit* self, QEvent* event);
	void (*connectNotify)(VirtualQTimeEdit* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQTimeEdit* self, QMetaMethod* signal);
}QTimeEdit_VTable;
VirtualQTimeEdit* QTimeEdit_new(const QTimeEdit_VTable* vtbl, size_t vdata, QWidget* parent);
VirtualQTimeEdit* QTimeEdit_new2(const QTimeEdit_VTable* vtbl, size_t vdata);
VirtualQTimeEdit* QTimeEdit_new3(const QTimeEdit_VTable* vtbl, size_t vdata, QTime* time);
VirtualQTimeEdit* QTimeEdit_new4(const QTimeEdit_VTable* vtbl, size_t vdata, QTime* time, QWidget* parent);
void QTimeEdit_connect_userTimeChanged(QTimeEdit* self, intptr_t slot, void (*callback)(intptr_t, QTime*), void (*release)(intptr_t));
void QTimeEdit_virtualbase_inputMethodEvent(VirtualQTimeEdit* self, QInputMethodEvent* param1);
bool QTimeEdit_virtualbase_eventFilter(VirtualQTimeEdit* self, QObject* watched, QEvent* event);
void QTimeEdit_virtualbase_childEvent(VirtualQTimeEdit* self, QChildEvent* event);
void QTimeEdit_virtualbase_customEvent(VirtualQTimeEdit* self, QEvent* event);
void QTimeEdit_virtualbase_connectNotify(VirtualQTimeEdit* self, QMetaMethod* signal);
void QTimeEdit_virtualbase_disconnectNotify(VirtualQTimeEdit* self, QMetaMethod* signal);
QLineEdit* QTimeEdit_protectedbase_lineEdit(const VirtualQTimeEdit* self);
void QTimeEdit_protectedbase_setLineEdit(VirtualQTimeEdit* self, QLineEdit* edit);
void QTimeEdit_protectedbase_updateMicroFocus(VirtualQTimeEdit* self);
void QTimeEdit_protectedbase_create(VirtualQTimeEdit* self);
void QTimeEdit_protectedbase_destroy(VirtualQTimeEdit* self);
bool QTimeEdit_protectedbase_focusNextChild(VirtualQTimeEdit* self);
bool QTimeEdit_protectedbase_focusPreviousChild(VirtualQTimeEdit* self);
QObject* QTimeEdit_protectedbase_sender(const VirtualQTimeEdit* self);
int QTimeEdit_protectedbase_senderSignalIndex(const VirtualQTimeEdit* self);
int QTimeEdit_protectedbase_receivers(const VirtualQTimeEdit* self, const char* signal);
bool QTimeEdit_protectedbase_isSignalConnected(const VirtualQTimeEdit* self, QMetaMethod* signal);
const QMetaObject* QTimeEdit_staticMetaObject();
typedef struct VirtualQDateEdit VirtualQDateEdit;
void* QDateEdit_vdata(VirtualQDateEdit* self);
QMetaObject* QDateEdit_metaObject(const QDateEdit* self);
void* QDateEdit_metacast(QDateEdit* self, const char* param1);
int QDateEdit_metacall(QDateEdit* self, int param1, int param2, void** param3);
struct miqt_string QDateEdit_tr(const char* s);
void QDateEdit_userDateChanged(QDateEdit* self, QDate* date);
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot, void (*callback)(intptr_t, QDate*), void (*release)(intptr_t));
struct miqt_string QDateEdit_tr2(const char* s, const char* c);
struct miqt_string QDateEdit_tr3(const char* s, const char* c, int n);