seaqt/QtWidgets/gen_qdatetimeedit.nim

proc fcQTimeEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void {.importc: "QTimeEdit_virtualbase_inputMethodEvent".}
proc fcQTimeEdit_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QTimeEdit_virtualbase_eventFilter".}
proc fcQTimeEdit_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QTimeEdit_virtualbase_childEvent".}
proc fcQTimeEdit_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QTimeEdit_virtualbase_customEvent".}
proc fcQTimeEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QTimeEdit_virtualbase_connectNotify".}
proc fcQTimeEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QTimeEdit_virtualbase_disconnectNotify".}
proc fcQTimeEdit_protectedbase_lineEdit(self: pointer): pointer {.importc: "QTimeEdit_protectedbase_lineEdit".}
proc fcQTimeEdit_protectedbase_setLineEdit(self: pointer, edit: pointer): void {.importc: "QTimeEdit_protectedbase_setLineEdit".}
proc fcQTimeEdit_protectedbase_updateMicroFocus(self: pointer): void {.importc: "QTimeEdit_protectedbase_updateMicroFocus".}
proc fcQTimeEdit_protectedbase_create(self: pointer): void {.importc: "QTimeEdit_protectedbase_create".}
proc fcQTimeEdit_protectedbase_destroy(self: pointer): void {.importc: "QTimeEdit_protectedbase_destroy".}
proc fcQTimeEdit_protectedbase_focusNextChild(self: pointer): bool {.importc: "QTimeEdit_protectedbase_focusNextChild".}
proc fcQTimeEdit_protectedbase_focusPreviousChild(self: pointer): bool {.importc: "QTimeEdit_protectedbase_focusPreviousChild".}
proc fcQTimeEdit_protectedbase_sender(self: pointer): pointer {.importc: "QTimeEdit_protectedbase_sender".}
proc fcQTimeEdit_protectedbase_senderSignalIndex(self: pointer): cint {.importc: "QTimeEdit_protectedbase_senderSignalIndex".}
proc fcQTimeEdit_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QTimeEdit_protectedbase_receivers".}
proc fcQTimeEdit_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QTimeEdit_protectedbase_isSignalConnected".}
proc fcQTimeEdit_new(vtbl, vdata: pointer, parent: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new".}
proc fcQTimeEdit_new2(vtbl, vdata: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new2".}
proc fcQTimeEdit_new3(vtbl, vdata: pointer, time: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new3".}
proc fcQTimeEdit_new4(vtbl, vdata: pointer, time: pointer, parent: pointer): ptr cQTimeEdit {.importc: "QTimeEdit_new4".}
proc fcQTimeEdit_staticMetaObject(): pointer {.importc: "QTimeEdit_staticMetaObject".}
proc fcQDateEdit_metaObject(self: pointer): pointer {.importc: "QDateEdit_metaObject".}
proc fcQDateEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QDateEdit_metacast".}
proc fcQDateEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QDateEdit_metacall".}
proc fcQDateEdit_tr(s: cstring): struct_miqt_string {.importc: "QDateEdit_tr".}
proc fcQDateEdit_userDateChanged(self: pointer, date: pointer): void {.importc: "QDateEdit_userDateChanged".}
proc fcQDateEdit_connect_userDateChanged(self: pointer, slot: int, callback: proc (slot: int, date: pointer) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QDateEdit_connect_userDateChanged".}
proc fcQDateEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QDateEdit_tr2".}
proc fcQDateEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDateEdit_tr3".}
proc fcQDateEdit_vtbl(self: pointer): pointer {.importc: "QDateEdit_vtbl".}
proc fcQDateEdit_vdata(self: pointer): pointer {.importc: "QDateEdit_vdata".}
